<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_space"
    tools:context=".activity.MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginHorizontal="@dimen/common_space"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:layout_marginEnd="@dimen/common_space"
        android:contentDescription="@string/description_author_name"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_space"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Style.OptionsButton"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/menu"
        android:text=""
        android:padding="4dp"
        app:icon="@drawable/baseline_more_vert_24"
        app:iconSize="@dimen/icon_big_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_space"
        app:constraint_referenced_ids="avatar, published, menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_space"
        app:constraint_referenced_ids="content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="64dp"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heart"
        style="@style/Style.HeartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/heart"
        android:checkable="true"
        android:background="@android:color/transparent"
        android:textColor="@color/normal"
        android:textSize="16sp"
        app:icon="@drawable/ic_heart"
        app:iconPadding="1dp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier1"
        tools:text="999"
        tools:textSize="16sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Style.CountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/min_size"
        android:contentDescription="@string/share"
        android:background="@android:color/transparent"
        android:textColor="@color/normal"
        android:textSize="16sp"
        app:icon="@drawable/share_24dp"
        app:iconPadding="1dp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toEndOf="@id/heart"
        app:layout_constraintTop_toTopOf="@id/barrier1"
        tools:text="998"
        tools:textSize="16sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eye"
        style="@style/Style.CountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/eye"
        android:background="@android:color/transparent"
        android:textColor="@color/normal"
        android:textSize="16sp"
        app:icon="@drawable/eye_24dp"
        app:iconPadding="1dp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier1"
        tools:text="997"
        tools:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>